# n8n_courses

./: .env_sample  .gitignore  14-1. 파이썬을 활용한 전처리.ipynb  14-2. 벡터 데이터베이스 업로드.ipynb  16 .Langraph로 구현하는 사내 챗봇.ipynb  17. Workflow에서 Agent 전환하기.ipynb  19.1 Text to SQL 테이블 생성 .ipynb  19.2 Text to SQL 테이블 추가 .ipynb  19.3 Text to SQL 테이블 업데이트.ipynb  9. n8n API와 Streamlit으로 만드는 이메일 작성 봇.py  README.md  pyproject.toml
output/: delegation_of_authority.md  employee_benefits_and_welfare_faq.md  employee_benefits_and_welfare_guide.md  employee_handbook_and_hr_policy.md  expense_management_guide.md  it_support_guide.md  legal_and_compliance_policy.md
